[package]
name = "terminal-snake"
version = "0.1.2"
edition = "2021"
license-file = "LICENSE"
description = "Play snake in the terminal"
repository = "https://github.com/ch1zzzzz/Terminal-Snake"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.25.0"
rand = "0.8.5"
serde = {version = "1.0.148", features = ["derive"]}
serde_json = "1.0"
confy = "0.5.1"